--- a/packages/node/tty/package.json
+++ b/packages/node/tty/package.json
@@ -2,8 +2,8 @@
     "name": "@gjsify/tty",
     "version": "0.0.1",
     "description": "Node.js tty module for Gjs",
-    "main": "lib/index.cjs",
-    "module": "lib/index.mjs",
+    "main": "lib/tty.cjs",
+    "module": "lib/tty.mjs",
     "type": "module",
     "scripts": {
         "build": "gjsify build --library src/index.ts",
