--- a/packages/gjs/utils/package.json
+++ b/packages/gjs/utils/package.json
@@ -6,10 +6,12 @@
     "module": "lib/index.mjs",
     "type": "module",
     "scripts": {
-        "build": "yarn run build:js && yarn run build:types",
-        "build:js": "node --experimental-import-meta-resolve esbuild.mjs",
-        "build:types": "tsc --emitDeclarationOnly",
-        "test": "yarn run build:js && yarn run test:gjs",
+        "build": "yarn run build:gjsify && yarn run build:types",
+        "build:gjsify": "gjsify build --library src/index.mts",
+        "build:types": "tsc --emitDeclarationOnly || exit 0",
+        "build:test": "yarn run build:test:gjs",
+        "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
+        "test": "yarn run build && yarn run build:test && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.js"
     },
     "keywords": [
@@ -18,6 +20,7 @@
         "fs"
     ],
     "devDependencies": {
+        "@gjsify/cli": "workspace:^",
         "@gjsify/types": "workspace:^",
         "typescript": "^4.8.2"
     }
