--- a/examples/deepkit-di/package.json
+++ b/examples/deepkit-di/package.json
@@ -3,11 +3,15 @@
   "private": true,
   "version": "0.0.1",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/index.gjs.js",
   "type": "module",
   "scripts": {
-    "start": "gjs -m dist/index.js",
-    "build": "node esbuild.mjs"
+    "start": "yarn run build && yarn run start:gjs",
+    "start:gjs": "gjs -m dist/index.gjs.js",
+    "start:node": "node dist/index.node.cjs",
+    "build": "yarn run build:gjs && yarn run build:node",
+    "build:gjs": "gjsify build src/index.ts --platform gjs --outfile dist/index.gjs.js",
+    "build:node": "gjsify build src/index.ts --platform node --outfile dist/index.node.cjs"
   },
   "engines": {
     "node": "16",
@@ -16,34 +20,11 @@
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "MIT",
   "dependencies": {
-    "@deepkit/app": "^1.0.1-alpha.74",
-    "@deepkit/injector": "^1.0.1-alpha.74",
-    "@deepkit/type": "^1.0.1-alpha.74",
-    "@gjsify/fs": "workspace:^",
-    "@gjsify/globals": "workspace:^",
-    "@gjsify/os": "workspace:^",
-    "@gjsify/process": "workspace:^",
-    "@gjsify/tty": "workspace:^",
-    "assert": "^2.0.0",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
-    "constants-browserify": "^1.0.0",
-    "crypto-browserify": "^3.12.0",
-    "domain-browser": "^4.22.0",
-    "events": "^3.3.0",
-    "path-browserify": "^1.0.1",
-    "querystring-es3": "^0.2.1",
-    "stream-browserify": "^3.0.0",
-    "string_decoder": "^1.3.0",
-    "url": "^0.11.0",
-    "util": "^0.12.4"
+    "@deepkit/injector": "^1.0.1-alpha.75",
+    "@deepkit/type": "^1.0.1-alpha.75"
   },
   "devDependencies": {
-    "@deepkit/type-compiler": "^1.0.1-alpha.74",
-    "@gjsify/esbuild-plugin-deepkit": "workspace:^",
-    "@types/node": "^18.7.15",
-    "esbuild": "^0.15.7",
-    "esbuild-plugin-alias": "^0.2.1",
-    "typescript": "^4.8.2"
+    "@gjsify/cli": "workspace:^",
+    "@types/node": "^18.7.15"
   }
 }
