chore(ci): Add initial github workflow

--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "yarn run build:esbuild; yarn run build:utils; yarn run build:unit; yarn run build:node",
-    "build:esbuild": "yarn workspace @gjsify/esbuild-plugin-deepkit run build; yarn workspace @gjsify/esbuild-plugin-gjsify run build",
-    "build:unit": "yarn workspace @gjsify/unit run build",
-    "build:node": "yarn workspace @gjsify/process run build; yarn workspace @gjsify/tty run build; yarn workspace @gjsify/url run build; yarn workspace @gjsify/fs run build; yarn workspace @gjsify/os run build; yarn workspace @gjsify/globals run build",
-    "build:types": "yarn workspace @gjsify/types run build",
-    "build:utils": "yarn workspace @gjsify/utils run build",
+    "test": "yarn workspaces foreach run test",
+    "build": "yarn run build:infra && yarn run build:gjs && yarn run build:all",
+    "build:infra": "yarn workspace @gjsify/resolve-npm run build && yarn workspace @gjsify/esbuild-plugin-deepkit run build && yarn workspace @gjsify/esbuild-plugin-gjsify run build && yarn workspace @gjsify/cli run build",
+    "build:gjs": "yarn workspace @gjsify/types run build && yarn workspace @gjsify/utils run build && yarn workspace @gjsify/unit run build",
     "build:all": "yarn workspaces foreach run build"
   },
   "author": "Pascal Garber <pascal@artandcode.studio>",
