--- a/packages/node/zlib/package.json
+++ b/packages/node/zlib/package.json
@@ -2,10 +2,11 @@
     "name": "@gjsify/zlib",
     "version": "0.0.1",
     "description": "node zlib module for gjsify",
-    "main": "lib/index.mjs",
-    "module": "lib/index.mjs",
+    "main": "lib/zlib.cjs",
+    "module": "lib/zlib.mjs",
     "type": "module",
     "scripts": {
+        "clear": "rm -rf lib",
         "build": "gjsify build --library src/index.ts",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
@@ -22,7 +23,7 @@
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.7.15"
+        "@types/node": "^18.7.16"
     },
     "dependencies": {
         "fflate": "^0.7.3"
