--- a/examples/deepkit-types/package.json
+++ b/examples/deepkit-types/package.json
@@ -6,6 +6,7 @@
   "main": "dist/index.gjs.js",
   "type": "module",
   "scripts": {
+    "clear": "rm -rf dist",
     "start": "yarn run build && yarn run start:gjs",
     "start:gjs": "gjs -m dist/index.gjs.js",
     "start:node": "node dist/index.node.cjs",
@@ -21,7 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@gjsify/cli": "workspace:^",
-    "@types/node": "^18.7.15"
+    "@types/node": "^18.7.16"
   },
   "dependencies": {
     "@deepkit/type": "^1.0.1-alpha.75"
