--- a/packages/infra/cli/package.json
+++ b/packages/infra/cli/package.json
@@ -10,6 +10,7 @@
         "gjsify": "./lib/index.js"
     },
     "scripts": {
+        "clear": "rm -rf lib",
         "start": "node lib/index.js",
         "build": "tsc && yarn run chmod",
         "chmod": "chmod +x ./lib/index.js"
@@ -31,6 +32,6 @@
     },
     "devDependencies": {
         "@types/yargs": "^17.0.12",
-        "typescript": "^4.8.2"
+        "typescript": "^4.8.3"
     }
 }
