--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -7,6 +7,7 @@
     "module": "dist/index.mjs",
     "types": "dist/index.d.ts",
     "scripts": {
+        "clear": "rm -rf dist",
         "build": "yarn run build:js && yarn run build:types",
         "build:js": "node esbuild.mjs",
         "build:types": "tsc --emitDeclarationOnly || exit 0"
@@ -17,9 +18,9 @@
         "fs"
     ],
     "dependencies": {
-        "@deepkit/app": "^1.0.1-alpha.74",
-        "@deepkit/injector": "^1.0.1-alpha.74",
-        "@deepkit/type": "^1.0.1-alpha.74",
+        "@deepkit/app": "^1.0.1-alpha.75",
+        "@deepkit/injector": "^1.0.1-alpha.75",
+        "@deepkit/type": "^1.0.1-alpha.75",
         "@gjsify/events": "workspace:^",
         "@gjsify/fs": "workspace:^",
         "@gjsify/globals": "workspace:^",
@@ -31,7 +32,7 @@
         "@gjsify/zlib": "workspace:^",
         "assert": "^2.0.0",
         "constants-browserify": "^1.0.0",
-        "core-js": "^3.25.0",
+        "core-js": "^3.25.1",
         "crypto-browserify": "^3.12.0",
         "esbuild-plugin-alias": "^0.2.1",
         "path-browserify": "^1.0.1",
@@ -44,6 +45,6 @@
         "@types/lodash": "^4.14.184",
         "esbuild": "^0.15.7",
         "lodash": "^4.17.21",
-        "typescript": "^4.8.2"
+        "typescript": "^4.8.3"
     }
 }
