--- a/packages/infra/resolve-npm/package.json
+++ b/packages/infra/resolve-npm/package.json
@@ -7,6 +7,7 @@
     "module": "lib/index.js",
     "types": "lib/index.d.ts",
     "scripts": {
+        "clear": "echo 'nothing to do'",
         "build": "echo 'nothing to do'"
     },
     "keywords": [
