--- a/packages/node/fs/package.json
+++ b/packages/node/fs/package.json
@@ -2,10 +2,11 @@
     "name": "@gjsify/fs",
     "version": "0.0.1",
     "description": "Node.js fs module for Gjs",
-    "main": "lib/index.cjs",
-    "module": "lib/index.mjs",
+    "main": "lib/fs.cjs",
+    "module": "lib/fs.mjs",
     "type": "module",
     "scripts": {
+        "clear": "rm -rf lib",
         "build": "gjsify build --library src/index.ts",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
@@ -22,6 +23,6 @@
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.7.15"
+        "@types/node": "^18.7.16"
     }
 }
