--- a/packages/node/net/package.json
+++ b/packages/node/net/package.json
@@ -2,10 +2,11 @@
     "name": "@gjsify/net",
     "version": "0.0.1",
     "description": "Node.js net module for Gjs",
-    "main": "lib/index.cjs",
-    "module": "lib/index.mjs",
+    "main": "lib/net.cjs",
+    "module": "lib/net.mjs",
     "type": "module",
     "scripts": {
+        "clear": "rm -rf lib",
         "build": "gjsify build --library src/index.ts",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
@@ -23,6 +24,6 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.7.15"
+        "@types/node": "^18.7.16"
     }
 }
