--- a/packages/node/os/package.json
+++ b/packages/node/os/package.json
@@ -2,10 +2,11 @@
   "name": "@gjsify/os",
   "version": "0.0.1",
   "description": "Node.js os module for Gjs",
-  "main": "lib/index.mjs",
-  "module": "lib/index.mjs",
+  "main": "lib/os.cjs",
+  "module": "lib/os.mjs",
   "type": "module",
   "scripts": {
+    "clear": "rm -rf lib",
     "build": "gjsify build --library src/index.ts",
     "build:test": "yarn run build:test:gjs && yarn run build:test:node",
     "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
