--- a/packages/node/process/package.json
+++ b/packages/node/process/package.json
@@ -2,10 +2,11 @@
   "name": "@gjsify/process",
   "version": "0.0.1",
   "description": "Node.js process module for Gjs",
-  "main": "lib/index.cjs",
-  "module": "lib/index.mjs",
+  "main": "lib/process.cjs",
+  "module": "lib/process.mjs",
   "type": "module",
   "scripts": {
+    "clear": "rm -rf lib",
     "build": "gjsify build --library src/index.ts",
     "build:test": "yarn run build:test:gjs && yarn run build:test:node",
     "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
@@ -25,6 +26,6 @@
   },
   "devDependencies": {
     "@gjsify/cli": "workspace:^",
-    "@types/node": "^18.7.15"
+    "@types/node": "^18.7.16"
   }
 }
