--- a/packages/node/querystring/package.json
+++ b/packages/node/querystring/package.json
@@ -2,10 +2,11 @@
     "name": "@gjsify/querystring",
     "version": "0.0.1",
     "description": "Node.js querystring module for Gjs",
-    "main": "lib/index.cjs",
-    "module": "lib/index.mjs",
+    "main": "lib/querystring.cjs",
+    "module": "lib/querystring.mjs",
     "type": "module",
     "scripts": {
+        "clear": "rm -rf lib",
         "build": "gjsify build --library src/index.ts",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
@@ -24,6 +25,6 @@
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/inherits": "^0.0.30",
-        "@types/node": "^18.7.15"
+        "@types/node": "^18.7.16"
     }
 }
