--- a/packages/node/tty/package.json
+++ b/packages/node/tty/package.json
@@ -2,10 +2,11 @@
     "name": "@gjsify/tty",
     "version": "0.0.1",
     "description": "Node.js tty module for Gjs",
-    "main": "lib/index.cjs",
-    "module": "lib/index.mjs",
+    "main": "lib/tty.cjs",
+    "module": "lib/tty.mjs",
     "type": "module",
     "scripts": {
+        "clear": "rm -rf lib",
         "build": "gjsify build --library src/index.ts",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
@@ -21,7 +22,7 @@
     ],
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
-        "@types/node": "^18.7.15"
+        "@types/node": "^18.7.16"
     },
     "dependencies": {
         "@gjsify/utils": "workspace:^"
