--- a/packages/web/abort-controller/package.json
+++ b/packages/web/abort-controller/package.json
@@ -6,6 +6,7 @@
     "module": "lib/index.mjs",
     "type": "module",
     "scripts": {
+        "clear": "rm -rf lib",
         "build": "gjsify build --library src/index.ts",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
@@ -21,7 +22,7 @@
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.7.15"
+        "@types/node": "^18.7.16"
     },
     "dependencies": {
         "abort-controller": "^3.0.0"
