chore: Change exports of ESM and CJS outputs (WIP)

--- a/packages/deno/deno_globals/package.json
+++ b/packages/deno/deno_globals/package.json
@@ -2,12 +2,12 @@
     "name": "@gjsify/deno_globals",
     "version": "0.0.1",
     "description": "Deno globals module for gjsify",
-    "main": "lib/index.cjs",
-    "module": "lib/index.mjs",
+    "main": "lib/cjs/index.js",
+    "module": "lib/mjs/index.js",
     "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
-        "build": "gjsify build --library src/index.ts",
+        "build": "gjsify build --library src/**/*.{ts,js}",
         "build:test": "yarn run build:test:gjs && yarn run build:test:deno",
         "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
         "build:test:deno": "gjsify build src/test.ts --platform deno --outfile test.deno.js",
