--- a/packages/gjs/utils/package.json
+++ b/packages/gjs/utils/package.json
@@ -2,13 +2,13 @@
     "name": "@gjsify/utils",
     "version": "0.0.1",
     "description": "Utils module for gjsify",
-    "main": "lib/utils.cjs",
-    "module": "lib/utils.mjs",
+    "main": "lib/cjs/index.js",
+    "module": "lib/esm/index.js",
     "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
         "build": "yarn run build:gjsify && yarn run build:types",
-        "build:gjsify": "gjsify build --library src/index.mts",
+        "build:gjsify": "gjsify build --library src/**/*.{ts,js}",
         "build:types": "tsc --emitDeclarationOnly || exit 0",
         "build:test": "yarn run build:test:gjs",
         "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
