--- a/packages/node/globals/package.json
+++ b/packages/node/globals/package.json
@@ -9,11 +9,11 @@
   ],
   "author": "Pascal Garber",
   "type": "module",
-  "main": "lib/globals.js",
-  "module": "lib/globals.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "scripts": {
     "clear": "rm -rf lib",
-    "build": "gjsify build --library src/index.ts",
+    "build": "gjsify build --library src/**/*.{ts,js}",
     "build:test": "yarn run build:test:gjs && yarn run build:test:node",
     "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
     "build:test:node": "gjsify build src/test.ts --platform node --outfile test.node.js",
