--- a/packages/node/tty/package.json
+++ b/packages/node/tty/package.json
@@ -2,12 +2,12 @@
     "name": "@gjsify/tty",
     "version": "0.0.1",
     "description": "Node.js tty module for Gjs",
-    "main": "lib/tty.cjs",
-    "module": "lib/tty.mjs",
+    "main": "lib/cjs/index.js",
+    "module": "lib/esm/index.js",
     "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
-        "build": "gjsify build --library src/index.ts",
+        "build": "gjsify build --library src/**/*.{ts,js}",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
         "build:test:node": "gjsify build src/test.ts --platform node --outfile test.node.js",
