--- a/packages/node/url/package.json
+++ b/packages/node/url/package.json
@@ -2,14 +2,14 @@
     "name": "@gjsify/url",
     "version": "0.0.1",
     "description": "Node.js url module for Gjs",
-    "main": "lib/url.cjs",
-    "module": "lib/url.mjs",
+    "main": "lib/indexs.cjs",
+    "module": "lib/indexs.mjs",
     "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
         "bundle:deno": "rm -f src/url.deno.js && deno bundle https://deno.land/std/node/url.ts src/url.deno.js",
         "patch:deno": "node ./patch-deno.mjs",
-        "build": "yarn run build:deno && gjsify build --library src/index.ts",
+        "build": "yarn run build:deno && gjsify build --library src/**/*.{ts,js}",
         "build:deno": "yarn run bundle:deno && yarn run patch:deno",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
