--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
         "Abortable",
+        "Deepkit's",
         "esbuild",
         "gjsify",
-        "mainloop"
+        "mainloop",
+        "outdir",
+        "outfile"
     ]
 }
