--- a/packages/infra/cli/package.json
+++ b/packages/infra/cli/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "description": "CLI for Gjsify",
     "type": "module",
-    "main": "lib/index.cjs",
+    "main": "lib/cjs/index.js",
     "module": "lib/index.js",
     "types": "lib/index.d.ts",
     "bin": {
