feat(gio-2.0): Start working on new extended Gio-2.0 module for Gjsify

--- a/packages/node/events/package.json
+++ b/packages/node/events/package.json
@@ -24,5 +24,9 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.7.16"
+    },
+    "dependencies": {
+        "@gjsify/event-target": "workspace:^",
+        "@gjsify/node-internal": "workspace:^"
     }
 }
