--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "typescript": "^4.8.3"
   },
   "packageManager": "yarn@3.2.1",
-  "resolutions": {
+  "disabled_resolutions": {
     "@deepkit/core": "portal:../deepkit-framework/packages/core",
     "@deepkit/event": "portal:../deepkit-framework/packages/event",
     "@deepkit/stopwatch": "portal:../deepkit-framework/packages/stopwatch",
@@ -33,7 +33,7 @@
     "@deepkit/type": "portal:../deepkit-framework/packages/type",
     "@deepkit/type-compiler": "portal:../deepkit-framework/packages/type-compiler",
     "@deepkit/type-spec": "portal:../deepkit-framework/packages/type-spec",
-    "buffer": "^6.0.3"
+    "@ts-for-gir/cli": "portal:../../ts-for-gir/packages/cli/"
   },
   "workspaces": [
     "packages/infra/*",
