--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -18,7 +18,7 @@
         "fs"
     ],
     "dependencies": {
-        "@deepkit/app": "^1.0.1-alpha.75",
+        "@deepkit/core": "^1.0.1-alpha.75",
         "@deepkit/injector": "^1.0.1-alpha.75",
         "@deepkit/type": "^1.0.1-alpha.75",
         "@gjsify/assert": "workspace:^",
