--- a/packages/node/require/package.json
+++ b/packages/node/require/package.json
@@ -8,17 +8,16 @@
     "require"
   ],
   "author": "Pascal Garber",
-  "type": "module",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "scripts": {
     "clear": "rm -rf lib",
     "build": "gjsify build --library src/**/*.{ts,js}",
     "build:test": "yarn run build:test:gjs && yarn run build:test:node",
-    "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
+    "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.mjs",
     "build:test:node": "gjsify build src/test.ts --platform node --outfile test.node.cjs",
     "test": "yarn run build && yarn run build:test && yarn run test:node && yarn run test:gjs",
-    "test:gjs": "gjs -m test.gjs.js",
+    "test:gjs": "gjs -m test.gjs.mjs",
     "test:node": "node test.node.cjs"
   },
   "dependencies": {
